<resources>
    <string name="app_name">DriveNext</string>
    <string name="splash_logo">splash_logo</string>
    <string name="splash_screen_text">Поможем найти твою следующую поездку</string>
    <string name="no_connection">Нет подключения \nк интернету</string>
    <string name="check_connection">Проверьте подключение и повторите \nпопытку</string>
    <string name="retry">Повторить попытку</string>
    <string name="no_connection_image_1">no connection image 1</string>
    <string name="no_connection_image_2">no connection image 2</string>
    <string name="skip">Пропустить</string>
    <string name="car_rent">Аренда автомобилей</string>
    <string name="onboarding1_text">Открой для себя удобный и доступный способ передвижения</string>
    <string name="next">Далее</string>
    <string name="onboarding1_main_image">onboarding1_main_image</string>
    <string name="slider">slider</string>
    <string name="onboarding2_main_image">onboarding2_main_image</string>
    <string name="safe_and_comfortable">Безопасно и удобно</string>
    <string name="onboarding2_text">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="onboarding3_main_image">onboarding3_main_image</string>
    <string name="best_offers">Лучшие предложения</string>
    <string name="onboarding3_text">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="lets_go">Поехали</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login_account">Войдите в аккаунт</string>
    <string name="enter_data">Пожалуйста, введите свои данные</string>
    <string name="email">Электронная почта</string>
    <string name="enter_email">Введите электронную почту</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="google">Войти через Google</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="create_pass">Придумайте пароль</string>
    <string name="repeat_pass">Повторите пароль</string>
    <string name="agreement">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="lastname">Фамилия</string>
    <string name="enter_lastname">Введите фамилию</string>
    <string name="enter_name">Введите имя</string>
    <string name="name">Имя</string>
    <string name="middlename">Отчество</string>
    <string name="enter_middlename">Введите отчество</string>
    <string name="birthday">Дата рождения</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="gender">Пол</string>
    <string name="female">Женский</string>
    <string name="male">Мужской</string>
    <string name="add_avatar">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="driving_licence_number">Номер водительского удостоверения</string>
    <string name="licence_hint">0000000000</string>
    <string name="issue_date">Дата выдачи</string>
    <string name="load_licence_photo">Загрузите фото водительского удостоверения</string>
    <string name="load_passport_photo">Загрузите фото паспорта</string>
    <string name="upload_photo">Загрузить фото</string>
    <string name="enjoy">Пользуйтесь с удовольствием</string>
    <string name="congratulations">Поздравляем</string>
    <string name="registered">Вы успешно зарегистрировались.\nОбработка ваших персональных данных\nзаймет около двух часов. Спасибо за\nожидание.</string>
    <string name="enter_auto">Введите марку автомобиля</string>
    <string name="lets_find_auto">Давайте найдём автомобиль</string>
    <string name="underline"><u>Возвращаемый депозит:</u></string>
</resources>