<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/onboarding1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="342dp"
        android:layout_height="33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp">

        <TextView
            android:id="@+id/text_view1"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/skip"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#2A1246"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/image_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/onboarding1_main_image"
        android:src="@drawable/ic_onboard1"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="149dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_2"
        android:layout_width="342dp"
        android:layout_height="201dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="520dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_3"
            android:layout_width="300dp"
            android:layout_height="87dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_view2"
                android:layout_width="290dp"
                android:layout_height="29dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="start"
                android:text="@string/car_rent"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view3"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="start"
                android:text="@string/onboarding1_text"
                android:textColor="#1A1A1A"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
            
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_4"
            android:layout_width="310dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_1"
                android:layout_width="131dp"
                android:layout_height="50dp"
                android:backgroundTint="#2A1246"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/next"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:cornerRadius="14dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/slider"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_slider"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>