<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/getting_started"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_1"
        android:layout_width="342dp"
        android:layout_height="700dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/create_acc"
                android:textSize="20sp"
                android:textFontWeight="600"
                android:textColor="#101828"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="9dp"
                android:src="@drawable/ic_back"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/black"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_3"
            android:layout_width="342dp"
            android:layout_height="400dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_4"
                android:layout_width="342dp"
                android:layout_height="68dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/text_view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/lastname"
                    android:textSize="14sp"
                    android:textColor="#404040"
                    android:fontFamily="@font/montserrat_regular"/>

                <EditText
                    android:id="@+id/edit_text1"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/shape_register_button"
                    android:fontFamily="@font/montserrat_light"
                    android:hint="@string/enter_lastname"
                    android:inputType="text"
                    android:paddingStart="14dp"
                    android:textAlignment="textStart"
                    android:textColorHint="#667085"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/text_view2"
                    tools:layout_editor_absoluteX="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_5"
                android:layout_width="342dp"
                android:layout_height="68dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_4"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/text_view3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/name"
                    android:textSize="14sp"
                    android:textColor="#404040"
                    android:fontFamily="@font/montserrat_regular"/>

                <EditText
                    android:id="@+id/edit_text2"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/shape_register_button"
                    android:fontFamily="@font/montserrat_light"
                    android:inputType="text"
                    android:hint="@string/enter_name"
                    android:textAlignment="textStart"
                    android:paddingStart="14dp"
                    android:textSize="14sp"
                    android:textColorHint="#667085"
                    app:layout_constraintTop_toBottomOf="@id/text_view3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_6"
                android:layout_width="342dp"
                android:layout_height="68dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_5"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/text_view4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/middlename"
                    android:textSize="14sp"
                    android:textColor="#404040"
                    android:fontFamily="@font/montserrat_regular"/>

                <EditText
                    android:id="@+id/edit_text3"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/shape_register_button"
                    android:fontFamily="@font/montserrat_light"
                    android:inputType="text"
                    android:hint="@string/enter_middlename"
                    android:textAlignment="textStart"
                    android:paddingStart="14dp"
                    android:textSize="14sp"
                    android:textColorHint="#667085"
                    app:layout_constraintTop_toBottomOf="@id/text_view4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_7"
                android:layout_width="342dp"
                android:layout_height="68dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_6"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/text_view5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/birthday"
                    android:textSize="14sp"
                    android:textColor="#404040"
                    android:fontFamily="@font/montserrat_regular"/>

                <EditText
                    android:id="@+id/edit_text4"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/shape_register_button"
                    android:fontFamily="@font/montserrat_light"
                    android:inputType="none"
                    android:focusable="false"
                    android:hint="@string/date_format"
                    android:paddingStart="14dp"
                    android:textSize="14sp"
                    android:textColorHint="#667085"
                    android:drawableStart="@drawable/ic_calender"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    app:layout_constraintTop_toBottomOf="@id/text_view5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_8"
                android:layout_width="342dp"
                android:layout_height="68dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_7"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/text_view6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/gender"
                    android:textSize="14sp"
                    android:textColor="#404040"
                    android:fontFamily="@font/montserrat_regular"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="338dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="-15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view6">


                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:backgroundTint="#2A1246"
                        android:checked="false"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/male"
                        android:textSize="14sp"
                        android:layout_marginEnd="8dp"/>

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="#2A1246"
                        android:checked="true"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/female"
                        android:textSize="14sp" />
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="346dp"
        android:layout_height="54dp"
        android:layout_marginTop="728dp"
        android:backgroundTint="#2A1246"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>